--- a/styles/global.css
+++ b/styles/global.css
@@ -28,6 +28,7 @@
     --main-color-somewhat-light:#186EB4;
     --main-color-very-light:#288EE2;
     --main-color-super-light:#6FB4EB;
+    --main-color-super-super-light: #cddbe8;
     --main-color-ctaq:#E3B654;
     --accent-second:#F24C27;
     --mostly-red:#D92B3A;
@@ -375,7 +376,14 @@ li{
     border-radius: 1em;
     flex-direction: column;
     color: var(--clr-neutral-500);
-    background-color: var(--clr-neutral-100);
+    background-color: var(--clr-neutral-50);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    cursor: pointer;
+}
+.grid-wrapper__item:hover{
+    background-color: var(--main-color-super-super-light);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 11px 11px rgba(0,0,0,0.22);
 }
 .grid-wrapper__item h3{
     text-align: center;
