--- a/styles/global.css
+++ b/styles/global.css
@@ -141,12 +141,6 @@ ul {
 .font-size-xxl{
   font-size: 2.441rem;
 }
-.align-left{
-  text-align: left;
-}
-.justify-left{
-  justify-content: left !important;
-}
 .font-bold{
   font-weight: 600;
 }
@@ -155,6 +149,20 @@ ul {
 }
 .flex {
   display: flex;
+}
+.flex-c-c{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.align-left{
+  text-align: left;
+}
+.justify-left{
+  justify-content: left !important;
+}
+.justify-sb{
+  justify-content: space-between;
 }
 
 .grid {
@@ -232,6 +240,7 @@ body {
   /*filter: grayscale(100%);*/
   box-sizing: border-box;
   scroll-padding-top: 80px;
+  color:var(--clr-neutral-550);
 }
 main {
   padding-top: var(--offset-top);
@@ -547,7 +556,6 @@ li {
   padding-right: 2.5rem;
   margin: var(--offset-top) auto;
   height: 100%;
-  color:var(--clr-neutral-100);
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 2em;
@@ -662,7 +670,7 @@ padding: 0.8em;
   display: grid;
   grid-column-gap: 0.2em;
   grid-template-rows: repeat(2, minmax(0px, auto));
-  grid-template-columns: 3.2em repeat(4, minmax(0px, 1fr));
+  grid-template-columns: 3.2em repeat(2, minmax(0px, 0.65fr)) auto 1fr;
 }
 .cart__items__icon{
   grid-column:1 / 2;
@@ -693,15 +701,9 @@ padding: 0.8em;
   grid-row:1 / 3;
 }
 
-.cart__items div{
-  color:var(--clr-neutral-550);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 .cart__sum {
   position: relative;
-  padding: 0.8em 0.3em;
+  padding: 1.3em 2.1em 1.3em 1.2em;
 }
 .cart__sum::before {
   content: "";
@@ -712,10 +714,6 @@ padding: 0.8em;
   left: 0;
   right: 0;
   background-color: var(--clr-neutral-200);
-}
-.cart__sum h4,
-.cart__sum h5 {
-  color: var(--clr-neutral-550);
 }
 
 .billing__title{
